--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <a href="about.html">About Me</a>
 
-<h1> Helloooooooooo out thereeee........ <h1>
+<h1> Helloooooooooo out thereeee........ </h1>
 
-<h2> Check back later gator</h2>
+<h2>Check back later gator!</h2>
