--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<head><a href="about.html">About Me</a>
-
-<h1> Helloooooooooo out thereeee........ </h1></head>
+<head>
+  <a href="about.html">About Me</a>
+  <h1> Helloooooooooo out thereeee........ </h1> 
+</head>
 
 <h2>Check back later gator!</h2>
