--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<head><title>Home</title><a href="about.html">About Me</a>
-<h1> Helloooooooooo out thereeee........ </h1></head> 
+<head>
+  <title>Home!</title>
+</head>
+  <a href="about.html">About Me</a>
+<h1> Helloooooooooo out thereeee........ </h1>
 
 <h2>Check back later gator!</h2>
