--- a/about.html
+++ b/about.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <a href="index.html">Home</a>
 
-<TITLE>About Me!</TITLE>
-<h1>About Me!</h1>
+<head><TITLE>About Me!</TITLE>
+<h1>About Me!</h1></head>
 
 <p>
   My name is Ricky Delgado and I am from Miami.
