--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-<!DOCTYPE html>
-<head>
-  <title> Home!</title>
-</head>
-  <a href="about.html">About Me</a>
+<!doctype html>
 
-<h1> Helloooooooooo out thereeee........ </h1>
+<title>Ricky Delgado</title>
 
-<h2>Check back later gator!</h2>
+<a href="about.html">About Me</a>
+
+<h1>Helloooooooooo out thereeee........ </h1>
+<h2>Check Back Later Gator!</h2>
+
+
