--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <a href="about.html">About Me</a>
 
-<h1>Helloooooooooo out thereeee........ </h1>
-<h2>Check Back Later Gator!</h2>
+<h1>Helloooooooooo out thereeee </h1>
+
 
 
