--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!doctype html>
 
-<title>Ricky Delgado</title>
+<head><title>Ricky Delgado</title>
 
 <a href="about.html">About Me</a>
+</head>
 
-<h1>Helloooooo out thereeeee!</h1>
+<h1>Helloooooooooo out thereeee.......</h1>
+<h2>Check back later gator!</h2>
 
 
 
