--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!doctype html>
 
-<head><title>Ricky Delgado</title>
-
-<a href="about.html">About Me</a>
+<head>
+  <title>Ricky Delgado</title>
 </head>
+<a href="about.html">About Me</a>
+
 
 <h1>Helloooooooooo out thereeee.......</h1>
 <h2>Check back later gator!</h2>
