--- a/about.html
+++ b/about.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
+<head>
+  <TITLE>About Me!</TITLE>
+</head>
 <a href="index.html">Home</a>
 
-<TITLE>About Me!</TITLE>
 <h1>About Me!</h1>
 
 <p>
