--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 
 <head>
+  <img src="https://farm8.staticflickr.com/7685/17229241502_a25a554852.jpg" alt="Welcome!">
   <title>Ricky Delgado</title>
 </head>
 <a href="about.html">About Me</a>
