--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <img src="https://farm8.staticflickr.com/7685/17229241502_a25a554852.jpg" alt="Welcome!">
   <title>Ricky Delgado</title>
 </head>
-<a href="about.html">About Me</a>
+<p><a href="about.html">About Me</a>
 
 
 <h1>Helloooooooooo out thereeee.......</h1>
