--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
 <a href="https://www.facebook.com/rickydelgadojunior"><img src="https://farm8.staticflickr.com/7669/17230710331_376956a037.jpg" alt="Ricky Delgado" height="150" width="150" target="_blank"</a>
 <a href="https://www.linkedin.com/pub/ricardo-delgado/43/194/951"><img src="https://farm9.staticflickr.com/8710/17231220015_4dac1cdea7.jpg" alt="LinkedIn" height="150" width="150" target="_blank"</a>
 
-
+<a href="https://twitter.com/RickyDelgadoMIA"
+target="_blank"><img src="https://farm8.staticflickr.com/7714/17231261525_0d4d63bcfb.jpg" alt="@RickyDelgadoMIA" height="150" width="150"/</a>
 
