--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 
 <head>
-  <img src="https://farm8.staticflickr.com/7685/17229241502_a25a554852.jpg" alt="Welcome!">
+  <img src="https://farm8.staticflickr.com/7685/17229241502_a25a554852.jpg" alt="Welcome!" width="200">
   <title>Ricky Delgado</title>
 </head>
 <p><a href="about.html">About Me</a>
