--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!doctype html>
 
 <head>
+  <style>
+    a {
+      text-decoration: none;
+    }
+    }
+  </style>
+</head>
   <img src="https://farm8.staticflickr.com/7685/17229241502_a25a554852.jpg" alt="Welcome!" width="200">
   <title>Ricky Delgado</title>
-</head>
 <p><a href="about.html">About Me</a>
 
 
