--- a/index.html
+++ b/index.html
@@ -5,16 +5,21 @@
     a {
       text-decoration: none;
     }
+    body {
+      background-color: neongreen;
     }
   </style>
 </head>
+<body>
   <img src="https://farm8.staticflickr.com/7685/17229241502_a25a554852.jpg" alt="Welcome!" width="200">
   <title>Ricky Delgado</title>
+
 <p><a href="about.html">About Me</a>
 
 
 <h1>Helloooooooooo out thereeee.......</h1>
 <h2>Welcome to my site! It is currently a work in progress but check back to stay updated!</h2>
+
 <p>
   Welcome to RickyDelgadoMiami.me! Here you will be able to check out some of my recent work and keep in touch with me! Currently the site is not finished but check back soon for the final version!
 </p>
@@ -27,4 +32,4 @@ target="_blank"><img src="https://farm8.staticflickr.com/7669/17230710331_376956
 
 <a href="https://www.linkedin.com/pub/ricardo-delgado/43/194/951"
 target="_blank"><img src="https://farm9.staticflickr.com/8710/17231220015_4dac1cdea7.jpg" alt="Ricky Delgado" height="50" width="50" target="_blank"</a>
-
+</body>
