--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       text-decoration: none;
     }
     body {
-      background-color: neongreen;
+      background-color: d29f1a;
     }
   </style>
 </head>
