--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-
+<link href='http://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
 <head>
   <style>
     a {
