--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     }
     body {
       background-color: #d29f1a;
-      font-family: 28px, 'Roboto Slab', serif;
+      font-family: 'Roboto Slab', serif;
     }
   </style>
 </head>
