--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <head>
   <link href='http://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Megrim' rel='stylesheet' type='text/css'>
   <style>
     a {
       text-decoration: none;
@@ -8,6 +9,10 @@
     body {
       background-color: #d29f1a;
       font-family: 'Roboto Slab', serif;
+    }
+    
+    h1 {
+      font-family: 'Megrim', cursive;
     }
   </style>
 </head>
