--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     }
     
     h1 {
-      font-family: 'Megrim', cursive;
+      font-family: bold 32px, 'Megrim', cursive;
     }
   </style>
 </head>
