--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       text-decoration: none;
     }
     body {
-      background-color: #d29f1a;
+      background-color: #4e23c2;
       font-family: 'Roboto Slab', serif;
     }
     
