--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     body {
       background-color: #4e23c2;
       font-family: 'Roboto Slab', serif;
+      font-size: 35px;
     }
     
     h1 {
