--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
       font-family: 'Megrim', cursive;
       font-size: 46px;
     }
+    
+    links {
+      color: #fbf8f1;
+    }
   </style>
 </head>
 <body>
