--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <style>
     a {
       text-decoration: none;
-      color: #fbf8f1;
+      font-color: #fbf8f1;
     }
     body {
       background-color: #4e23c2;
