--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
       text-decoration: none;
       font-color: #fbf8f1;
     }
+    
+    a:hover {
+      text-decoration: underline;
+    }
     body {
       background-color: #4e23c2;
       font-family: 'Roboto Slab', serif;
