--- a/index.html
+++ b/index.html
@@ -43,4 +43,8 @@ target="_blank"><img src="https://farm8.staticflickr.com/7669/17230710331_376956
 
 <a href="https://www.linkedin.com/pub/ricardo-delgado/43/194/951"
 target="_blank"><img src="https://farm9.staticflickr.com/8710/17231220015_4dac1cdea7.jpg" alt="Ricky Delgado" height="50" width="50" target="_blank"</a>
+
+<section>
+  <button>See my work!</button>
+</section>
 </body>
