--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
       font-family: 'Megrim', cursive;
       font-size: 46px;
     }
+    
+    work {
+      color:#fbf8f1 ;
+    }
 
   </style>
 </head>
@@ -44,7 +48,7 @@ target="_blank"><img src="https://farm8.staticflickr.com/7669/17230710331_376956
 <a href="https://www.linkedin.com/pub/ricardo-delgado/43/194/951"
 target="_blank"><img src="https://farm9.staticflickr.com/8710/17231220015_4dac1cdea7.jpg" alt="Ricky Delgado" height="50" width="50" target="_blank"</a>
 
-<section>
+<section id="work">
   <button>See my work!</button>
 </section>
 </body>
