--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     }
     
     #work {
-      color:#fbf8f1 ;
+      background-image: url(http://i.imgur.com/qU4i8FL.png);
+      height: 100px;
     }
 
   </style>
