--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     #work {
       background-image: url(http://i.imgur.com/qU4i8FL.png);
       height: 100px;
-      width: fit to device;
+      text-align: center;
     }
 
   </style>
