--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
       height: 100px;
       text-align: center;
     }
-
+    
+    #text {
+      background-image: url(http://www.gratisography.com/pictures/181_1.jpg);
+      height: 300px;
+      text-align: center;
+    }
   </style>
 </head>
 <body>
@@ -37,9 +42,11 @@
 <h1>Helloooooooooo out thereeee.......</h1>
 <h2>Welcome to my site! It is currently a work in progress but check back to stay updated!</h2>
 
+<section id="type">
 <p>
   Welcome to RickyDelgadoMiami.me! Here you will be able to check out some of my recent work and keep in touch with me! Currently the site is not finished but check back soon for the final version!
 </p>
+</section>
 
 <a href="https://twitter.com/RickyDelgadoMIA"
 target="_blank"><img src="https://farm8.staticflickr.com/7714/17231261525_0d4d63bcfb.jpg" alt="@RickyDelgadoMIA" height="50" width="50"/</a>
