--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       text-align: center;
     }
     
-    #text {
+    #type {
       background-image: url(http://www.gratisography.com/pictures/181_1.jpg);
       height: 300px;
       text-align: center;
