--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     }
     
     #type {
-      background-image: url(http://www.gratisography.com/pictures/181_1.jpg);
+      background-image: url(http://i.imgur.com/sZ9Gakh.jpg);
       height: 300px;
       text-align: center;
     }
