--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     }
     
     #type {
-      background-image: url(http://i.imgur.com/sZ9Gakh.jpg);
+      background-image: url(http://i.imgur.com/H6sz1jS.jpg);
       height: 600px;
       text-align: center;
     }
