--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     }
     
     #work {
-      background-image: url(http://i.imgur.com/qU4i8FL.png);
+      background-image: url(http://www.gratisography.com/pictures/53_1.jpg);
       height: 100px;
       text-align: center;
     }
