--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     }
     
     #type {
-      background-image: url(http://i.imgur.com/H6sz1jS.jpg);
+      background-image: url(http://www.gratisography.com/pictures/53_1.jpg);
       height: 250px;
       text-align: center;
     }
