--- a/index.html
+++ b/index.html
@@ -4,10 +4,6 @@
   <link href='http://fonts.googleapis.com/css?family=Megrim' rel='stylesheet' type='text/css'>
   <style>
   
-  .box_shadow {
-  -webkit-box-shadow: 0px 0px 4px 0px #ffffff; /* Android 2.3+, iOS 4.0.2-4.2, Safari 3-4 */
-          box-shadow: 0px 0px 4px 0px #ffffff; /* Chrome 6+, Firefox 4+, IE 9+, iOS 5+, Opera 10.50+ */
-}
   
     a {
       text-decoration: none;
@@ -15,7 +11,7 @@
     }
     
     body {
-      background-color: #4e23c2;
+      background-color: #000;
       font-family: 'Roboto Slab', serif;
     }
     
