--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
 
     body {body {
-      background-color: #4e23c2;
+      background-color: #ffooff;
       font-family: 'Roboto Slab', serif;
   
     h1 {
