--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
 
     body {body {
-      background-color: #ffooff;
+      background-color: #C034D6;
       font-family: 'Roboto Slab', serif;
   
     h1 {
