Update and rename test to test.html

--- a/test.html
+++ b/test.html
@@ -1,14 +1,19 @@
 <!doctype html>
 
-<head>
+ <head>
 <style>
+h1{
+color:red;
+}
 
 body{
 background-color: #000;
 } 
+
 </style>
 </head>
 <body>
 <h1>Red Header</h1>
+
 </body>
 
