--- a/test.html
+++ b/test.html
@@ -2,9 +2,6 @@
 
  <head>
 <style>
-h1{
-color:red;
-}
 
 body{
 background-color: #000;
@@ -13,7 +10,7 @@ background-color: #000;
 </style>
 </head>
 <body>
-<h1>Red Header</h1>
+<h1 style="color:red">Red Header</h1> 
 
 </body>
 
