--- a/test.html
+++ b/test.html
@@ -10,7 +10,7 @@ background-color: #000;
 </style>
 </head>
 <body>
-<h1 style="color:red">Red Header</h1> 
+<h1 "color:red">Red Header</h1>
 
 </body>
 
