--- a/test.html
+++ b/test.html
@@ -1,16 +1,14 @@
 <!doctype html>
 
- <head>
-<style>
-
-body{
-background-color: #000;
-} 
-
-</style>
+<head>
+h1{
+color:red;
+}
 </head>
 <body>
-<h1 "color:red">Red Header</h1>
-
+<h1>Red Header</h1>
 </body>
+
+
+
 
