--- a/index.html
+++ b/index.html
@@ -4,17 +4,16 @@
   <link href='http://fonts.googleapis.com/css?family=Megrim' rel='stylesheet' type='text/css'>
   <style>
   
-  
     a {
       text-decoration: none;
       font-color: #fbf8f1;
     }
     
-
-    body {body {
-      background-color: #C034D6;
+    body {
+      background-color: #4e23c2;
       font-family: 'Roboto Slab', serif;
-  
+    }
+    
     h1 {
       font-family: 'Megrim', cursive;
       font-size: 46px;
