--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
     
     #type {
       background-image: url(http://www.gratisography.com/pictures/53_1.jpg);
-      height: 250px;
+      height: 1000px; 
+      width: 600px;
       text-align: center;
     }
   </style>
