--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     }
     
     body {
-      background-color: #4e23c2;
+      background-color: #121949;
       font-family: 'Roboto Slab', serif;
     }
     
