--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     
     body {
       background-color: #121949;
+      background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center; 
       font-family: 'Roboto Slab', serif;
     }
     
