--- a/test.html
+++ b/test.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <!DOCTYPE html>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<meta charset=UTF-8" />
 <title>Untitled Document</title>
 <head>
 <style>
