--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
   <img src="https://farm8.staticflickr.com/7685/17229241502_a25a554852.jpg" alt="Welcome!" width="200">
   <title>Ricky Delgado</title>
 
-<p><a href="about.html">About Me</a>
+<br>
+<a href="about.html">About Me</a>
+<br>
+<a href="contact.html">Contact Me</a>
+
 
 
 <h1>Helloooooooooo out thereeee.......</h1>
