--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </style>
 </head>
 <body>
-  <img src="https://farm8.staticflickr.com/7685/17229241502_a25a554852.jpg" alt="Welcome!" width="200">
+  <img src="http://i.imgur.com/pP7mhWb.png" alt="Welcome!" width="300">
   <title>Ricky Delgado</title>
 
 <br>
