--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
       font-color: #fbf8f1;
     }
     
+    section {
+      color: #FFF;
+      font-size: 40px;
+      font-weight: 100;
+      padding: 15px 0px 20px;
+    }
+    
     body {
       background-color: #4e23c2;
       font-family: 'Roboto Slab', serif;
@@ -33,7 +40,7 @@
   </style>
 </head>
 <body>
-  <img src="http://i.imgur.com/pP7mhWb.png" alt="Welcome!" width="200">
+<section>  <img src="http://i.imgur.com/pP7mhWb.png" alt="Welcome!" width="200"> </section>
   <title>Ricky Delgado</title>
 
 <br>
