--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       font-color: #fbf8f1;
     }
     
-    section {
+    #logo {
       color: #FFF;
       font-size: 40px;
       font-weight: 100;
@@ -40,7 +40,7 @@
   </style>
 </head>
 <body>
-<section>  <img src="http://i.imgur.com/pP7mhWb.png" alt="Welcome!" width="200"> </section>
+<section id="logo">  <img src="http://i.imgur.com/pP7mhWb.png" alt="Welcome!" width="200"> </section>
   <title>Ricky Delgado</title>
 
 <br>
