--- a/about.html
+++ b/about.html
@@ -44,13 +44,15 @@
 <h1>About Me!</h1>
 
 <body>
+<img src="http://i.imgur.com/QxNYhKL.jpg?1" alt="Ricky Delgado" style="height:228px">
   My name is Ricky Delgado and I am from Miami.
 <br>
 I am a graphic design and web design major at MIU focusing more in graphic design and digital illustration.
 <br>
 I am working on my coding skills to better suit your needs! 
 <br>
-Check out <a href="rickydelgado.me/portfolio"> alt="my portfolio</a>!
+Check out <a href="rickydelgado.me/portfolio">my portfolio!</a>
+
 </p>
 
 <a href="https://www.linkedin.com/pub/ricardo-delgado/43/194/951"target="_blank">
