--- a/about.html
+++ b/about.html
@@ -39,17 +39,18 @@
   </style>
 </head>
 <section id="logo">  <img src="http://i.imgur.com/pP7mhWb.png" alt="Welcome!" width="200"></section>
-<a href="index.html">Home</a>
+<a href="index.html">Home</a> | <a href="contact.html">Contact Me</a>
 
 <h1>About Me!</h1>
 
 <body>
 <img src="http://i.imgur.com/QxNYhKL.jpg?1" alt="Ricky Delgado" style="height:228px">
-  My name is Ricky Delgado and I am from Miami.
 <br>
-I am a graphic design and web design major at MIU focusing more in graphic design and digital illustration.
+My name is Ricky Delgado and I am a Miami native.
 <br>
-I am working on my coding skills to better suit your needs! 
+I am a graphic design and web design major at Miami International University of Art & Design in Downtown Miami focusing more in graphic design and digital illustration.
+<br>
+I am constantly working on my coding skills to better suit your needs! 
 <br>
 Check out <a href="rickydelgado.me/portfolio">my portfolio!</a>
 
