--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@ I am a graphic design and web design major at Miami International University of 
 <br>
 I am constantly working on my coding skills to better suit your needs! 
 <br>
-Check out <a href="rickydelgado.me/portfolio">my portfolio!</a>
+Check out <a href="http://rickydelgado.me/portfolio">my portfolio!</a>
 
 </p>
 
