--- a/contact.html
+++ b/contact.html
@@ -48,8 +48,11 @@
 <br>
 <form action="/my-handling-form-page" method="post">
     <div>
+    	<form method="post" action="mailto:rickydelgadojunior@gmail.com" >
+<input type="submit" value="Send Email" /> 
+
         <label for="name">Name:</label>
-        <input type="text" id="name" name="user_name" />
+        <input type="submit" id="name" name="user_name" />
     </div>
     <div>
         <label for="mail">E-mail:</label>
