--- a/contact.html
+++ b/contact.html
@@ -36,6 +36,14 @@
       font-size: 46px;
 	  text-shadow:#606;
     }
+    
+    #contact {
+    	color: #FFF
+	background-color: #606;
+	margin: 0px 20px 0px 180px;
+	box-shadow: #36C;
+	text-transform:capitalize;
+    }
   </style>
 </head>
 <section id="logo">  <img src="http://i.imgur.com/pP7mhWb.png" alt="Welcome!" width="200"></section>
@@ -45,28 +53,10 @@
 
 <body>
 <h2>Feel free to contact me with any inquiries or to commission my services!</h2>
-<br>
-<form action="/my-handling-form-page" method="post">
-    <div>
-    	<form method="post" action="mailto:rickydelgadojunior@gmail.com" >
-<input type="submit" value="Send Email" /> 
-
-        <label for="name">Name:</label>
-        <input type="submit" id="name" name="user_name" />
-    </div>
-    <div>
-        <label for="mail">E-mail:</label>
-        <input type="email" id="mail" name="user_email" />
-    </div>
-    <div>
-        <label for="msg">Message:</label>
-        <textarea id="msg" name="user_message"></textarea>
-    </div>
-    
-    <div class="button">
-        <button type="submit">Send your message</button>
-    </div>
-</form>
+<section id=contact>
+<strong>Email:</strong> RickyDelgadoJunior@Gmail.com
+<strong>Phone Number:</strong> (786)282-9112
+</section>
 
 <a href="https://www.linkedin.com/pub/ricardo-delgado/43/194/951"target="_blank">
 <img border="0" alt="Linkedin" src="http://i.imgur.com/OG6a8lm.png" width="50" height="50">
