--- a/contact.html
+++ b/contact.html
@@ -53,8 +53,9 @@
 
 <body>
 <h2>Feel free to contact me with any inquiries or to commission my services!</h2>
-<section id=contact>
+<section id="contact">
 <strong>Email:</strong> RickyDelgadoJunior@Gmail.com
+<br>
 <strong>Phone Number:</strong> (786)282-9112
 </section>
 
