--- a/contact.html
+++ b/contact.html
@@ -39,8 +39,10 @@
     
     #contact {
     	color: #FFF
-	background-color: #606;
-	margin: 0px 20px 0px 180px;
+	background-color: #;
+	margin: 0px 180px 0px 20px;
+	height:250px
+	width:400px;
 	box-shadow: #36C;
 	text-transform:capitalize;
     }
