--- a/contact.html
+++ b/contact.html
@@ -60,12 +60,12 @@
 <br>
 <strong>Phone Number:</strong> (786)282-9112
 </section>
-
-<a href="https://www.linkedin.com/pub/ricardo-delgado/43/194/951"target="_blank">
+</body>
+<footer><a href="https://www.linkedin.com/pub/ricardo-delgado/43/194/951"target="_blank">
 <img border="0" alt="Linkedin" src="http://i.imgur.com/OG6a8lm.png" width="50" height="50">
 <a href="https://www.facebook.com/rickydelgadojunior"target="_blank">
 <img border="0" alt="Facebook" src="http://i.imgur.com/kX0UajV.png" width="50" height="50">
 <a href="https://twitter.com/RickyDelgadoMIA"target="_blank">
 <img border="0" alt="Twitter" src="http://i.imgur.com/eeDJ0FM.png" width="50" height="50">
 </a>
-</body>
+</footer>
