--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
     
     #logo {
 	color: #FFF;
-	background-image: url(http://i.imgur.com/IUEIOQm.jpg);
+	background-image: url('http://i.imgur.com/IUEIOQm.jpg');
 	  margin: 0px 20px 0px 20px
       font-size: 40px;
 	font-weight: 100;
@@ -63,6 +63,7 @@
 <br>
 </section>
 </body>
+<br>
 <footer>
 	<a href="https://www.linkedin.com/pub/ricardo-delgado/43/194/951"target="_blank">
 	<img border="0" alt="Linkedin" src="http://i.imgur.com/OG6a8lm.png" width="50" height="50">
