--- a/contact.html
+++ b/contact.html
@@ -35,6 +35,7 @@
 	  font-family: 'Megrim', cursive;
       font-size: 46px;
 	  text-shadow:#606;
+	  text-shadow: 1px 1px 2px white;
     }
     
     #contact {
