--- a/about.html
+++ b/about.html
@@ -49,7 +49,9 @@
 <br>
 My name is Ricky Delgado and I am a Miami native.
 <br>
-I am a graphic design and web design major at Miami International University of Art & Design in Downtown Miami focusing more in graphic design and digital illustration.
+I am a graphic design and web design major at Miami International University
+<br>
+of Art & Design in Downtown Miami focusing more in graphic design and digital illustration.
 <br>
 I am constantly working on my coding skills to better suit your needs! 
 <br>
