--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     body {
       background-color: #4e23c2;
       font-family: 'Roboto Slab', serif;
+      text-align: center;
     }
     
     h1 {
