--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,10 @@
   </style>
 </head>
 <section id="logo">  <img src="http://i.imgur.com/pP7mhWb.png" alt="Welcome!" width="200"></section>
-<a href="index.html">Home</a> | <a href="contact.html">Contact Me</a>
+ <nav>
+  <a href="index.html">Home</a> | 
+  <a href="contact.html">Contact Me</a>
+</nav>
 
 <h1>Contact Me!</h1>
 
