--- a/index.html
+++ b/index.html
@@ -58,8 +58,10 @@
 </head>
 <body>
 <section id="logo">  <img src="http://i.imgur.com/pP7mhWb.png" alt="Welcome!" width="200"></section>
-  <a href="about.html">About Me</a> | 
-  <a href="contact.html">Contact Me</a></p>
+  <nav>
+  	<a href="about.html">About Me</a> | 
+  	<a href="contact.html">Contact Me</a>
+  </nav></p>
 <h1>Ricky Delgado Design</h1>
 <h2>Welcome to my site! Here you can find multiple ways to contact me or check out my latest work!</h2>
 
