--- a/about.html
+++ b/about.html
@@ -40,20 +40,24 @@
   </style>
 </head>
 <section id="logo">  <img src="http://i.imgur.com/pP7mhWb.png" alt="Welcome!" width="200"></section>
-<a href="index.html">Home</a> | <a href="contact.html">Contact Me</a>
+<nav>
+	<a href="index.html">Home</a> | 
+	<a href="contact.html">Contact Me</a>
+</nav>
 
 <h1>About Me!</h1>
 
 <body>
 <img src="http://i.imgur.com/QxNYhKL.jpg?1" alt="Ricky Delgado" style="height:228px">
 <br>
-My name is Ricky Delgado and I am a Miami native.
+<article>My name is Ricky Delgado and I am a Miami native.
 <br>
 I am a graphic design and web design major at Miami International University
 <br>
 of Art & Design in Downtown Miami focusing more in graphic design and digital illustration.
 <br>
 I am constantly working on my coding skills to better suit your needs! 
+</article>
 <br>
 Check out <a href="http://rickydelgado.me/portfolio">my portfolio!</a>
 
