--- a/about.html
+++ b/about.html
@@ -5,7 +5,11 @@
   <link href='http://fonts.googleapis.com/css?family=Megrim' rel='stylesheet' type='text/css'>
   <style>
   
-    
+    article {
+    	font-color: #fff
+    	width:300px;
+    	text-shadow: 1px 1px 3px white;
+    }
 	
 	a {
       text-decoration: none;
