--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
   <style>
   
     article {
-    	margin:200px;
+    	margin: 30px 200px;
     	font-color: #fff
     	width:300px;
     	text-shadow: 1px 1px 3px white;
