--- a/about.html
+++ b/about.html
@@ -5,6 +5,10 @@
   <link href='http://fonts.googleapis.com/css?family=Megrim' rel='stylesheet' type='text/css'>
   <style>
   
+    img {
+    	box-shadow:5px 5px 5px black;
+    }
+    
     article {
     	margin: 30px 200px;
     	font-color: #fff
