--- a/about.html
+++ b/about.html
@@ -5,9 +5,6 @@
   <link href='http://fonts.googleapis.com/css?family=Megrim' rel='stylesheet' type='text/css'>
   <style>
   
-    img {
-    	box-shadow:5px 5px 5px black;
-    }
     
     article {
     	margin: 30px 200px;
@@ -28,10 +25,11 @@
     #logo {
 	color: #FFF;
 	background-image: url(http://i.imgur.com/IUEIOQm.jpg);
-	  margin: 0px 20px 0px 20px
-      font-size: 40px;
+	margin: 0px 20px 0px 20px
+        font-size: 40px;
 	font-weight: 100;
 	padding: 15px 0px 20px;
+	box-shadow: 5px 5px 6px purple;
     }
     
     body {
