--- a/about.html
+++ b/about.html
@@ -29,13 +29,13 @@
         font-size: 40px;
 	font-weight: 100;
 	padding: 15px 0px 20px;
-	box-shadow: 5px 5px 6px purple;
     }
     
     body {
       background-color: #4e23c2;
       font-family: 'Roboto Slab', serif;
       text-align:center;
+      box-shadow: 0px 5px 6px black;
     }
     
     h1 {
