--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       background-color: #4e23c2;
       font-family: 'Roboto Slab', serif;
       text-align: center;
+      box-shadow: 0px 5px 6px black;
     }
     
     h1 {
@@ -52,7 +53,6 @@
           height: 250px;
           text-align: center;
 	  background-repeat:no-repeat;
-	  
     }
   </style>
 </head>
