--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <nav>
   	<a href="about.html">About Me</a> | 
   	<a href="contact.html">Contact Me</a>
-  </nav></p>
+  </nav>
 <h1>Ricky Delgado Design</h1>
 <h2>Welcome to my site! Here you can find multiple ways to contact me or check out my latest work!</h2>
 
@@ -76,11 +76,11 @@
 <section id="work">
   <button>See my work!</button>
 </section>
-<a href="https://www.linkedin.com/pub/ricardo-delgado/43/194/951"target="_blank">
-<img border="0" alt="Linkedin" src="http://i.imgur.com/OG6a8lm.png" width="50" height="50">
-<a href="https://www.facebook.com/rickydelgadojunior"target="_blank">
-<img border="0" alt="Facebook" src="http://i.imgur.com/kX0UajV.png" width="50" height="50">
-<a href="https://twitter.com/RickyDelgadoMIA"target="_blank">
-<img border="0" alt="Twitter" src="http://i.imgur.com/eeDJ0FM.png" width="50" height="50">
+<a href="https://www.linkedin.com/pub/ricardo-delgado/43/194/951" target="_blank">
+<img alt="Linkedin" src="http://i.imgur.com/OG6a8lm.png" width="50" height="50">
+<a href="https://www.facebook.com/rickydelgadojunior" target="_blank">
+<img alt="Facebook" src="http://i.imgur.com/kX0UajV.png" width="50" height="50">
+<a href="https://twitter.com/RickyDelgadoMIA" target="_blank">
+<img alt="Twitter" src="http://i.imgur.com/eeDJ0FM.png" width="50" height="50">
 </a>
 </body>
