--- a/index.html
+++ b/index.html
@@ -79,10 +79,9 @@
   <button>See my work!</button>
 </section>
 <a href="https://www.linkedin.com/pub/ricardo-delgado/43/194/951" target="_blank">
-<img alt="Linkedin" src="http://i.imgur.com/OG6a8lm.png" width="50" height="50">
+<img alt="Linkedin" src="http://i.imgur.com/OG6a8lm.png" width="50" height="50"></a>
 <a href="https://www.facebook.com/rickydelgadojunior" target="_blank">
-<img alt="Facebook" src="http://i.imgur.com/kX0UajV.png" width="50" height="50">
+<img alt="Facebook" src="http://i.imgur.com/kX0UajV.png" width="50" height="50"></a>
 <a href="https://twitter.com/RickyDelgadoMIA" target="_blank">
-<img alt="Twitter" src="http://i.imgur.com/eeDJ0FM.png" width="50" height="50">
-</a>
+<img alt="Twitter" src="http://i.imgur.com/eeDJ0FM.png" width="50" height="50"></a>
 </body>
