--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
 <section id="logo">  <img src="http://i.imgur.com/pP7mhWb.png" alt="Welcome!" width="200"></section>
  <nav>
   <a href="index.html">Home</a> | 
-  <a href="contact.html">Contact Me</a>
+  <a href="about.html">About Me</a>
 </nav>
 <h1>Contact Me!</h1>
 	
