--- a/test.html
+++ b/test.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<header>
+<head>
 <nav>
 <a href="index.html">Home</a>
 <a href-"about-us.html">About Us</a>
 </nav>
-</header>
+</head>
 <body>
 <section>
 <h1> About Us </h1>
