--- a/test.html
+++ b/test.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <head>
 <nav>
-<a href="index.html">Home</a>
-<a href-"about-us.html">About Us</a>
+<a href="index.html"> Home</a>
+<a href="about-us.html"> About Us</a>
 </nav>
 </head>
 <body>
