--- a/test.html
+++ b/test.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
+<title>Basic Web Class</title>
 <head>
+  
+</head>
+<body>
+<header>
 <nav>
 <a href="index.html"> Home</a>
 <a href="about-us.html"> About Us</a>
 </nav>
-</head>
-<body>
 <section>
 <h1> About Us </h1>
 We are the Basic Web class.
