--- a/test.html
+++ b/test.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <title>Basic Web Class</title>
+
 <head>
   
 </head>
@@ -9,6 +10,7 @@
 <a href="index.html"> Home</a>
 <a href="about-us.html"> About Us</a>
 </nav>
+</header>
 <section>
 <h1> About Us </h1>
 We are the Basic Web class.
