--- a/test.html
+++ b/test.html
@@ -1,7 +1,6 @@
-<!DOCTYPE html>
-<title>Basic Web Class</title>
-
+<!doctype html>
 <head>
+<title>Basic Web Class</title>
 </head>
 <body>
 <header>
