--- a/midterm.html
+++ b/midterm.html
@@ -38,6 +38,6 @@ color: #F06529;
 <h2>IM1200 Basic Web Design</h2>
 <h4><a href="http://rickydelgadomiami.me">Ricky Delgado</a></h4>
 <h4>May 6, 2015</h4>
- <img src="http://www.w3.org/html/logo/#downloads" alt="HTML5" style="height:228px">
+ <img src="http://www.w3.org/html/logo/#downloads" alt="HTML5">
 </section>
 
