--- a/test.html
+++ b/test.html
@@ -1,20 +1,78 @@
 <!doctype html>
+<html>
 <head>
-<title>Basic Web Class</title>
+<meta charset="UTF-8">
+<title>Midterm Extra Credit</title>
+<style>
+body {
+	background-color: rgba(10,49,18,1.00);
+	background-image:url(../Downloads/lights-night-street-977.jpg);
+	background-size: cover;
+	background-repeat: no-repeat;
+	text-align: center;
+}
+h1 {
+	color: white;
+	font-family: 'Raleway', sans-serif;
+	text-align: center;
+	text-transform: uppercase;
+	letter-spacing: 10px;
+	font-size: 39px;
+	margin-bottom: 0px;
+	}
+
+h2 {
+	color: white;
+	font-family: 'Raleway', sans-serif;
+	text-align: center;
+	margin-top: 5px;
+}
+
+p {
+	color: white;
+	font-family: 'Raleway', sans-serif;
+	text-align: center;
+	margin-top: 5px;
+	font-size: 10px;
+}
+
+#text {
+	background-color: rgba(255,255,255,0.4);
+	padding: 10px;
+	margin-top: 130px
+	}
+#start {
+	text-align: center;
+	}
+	
+button {
+	background-color: #9E0002;
+	color: white;
+	font-family: 'Raleway', sans-serif;
+	padding: 10px;
+	width: 200px;
+	text-transform: uppercase;
+	border: none;
+	border-radius: 5px;
+}
+a {
+	text-decoration: none;
+	color: #9E0002;
+}
+</style>
 </head>
+
 <body>
+<section id="text">
 <header>
-<nav>
-<a href="index.html"> Home</a>
-<a href="about-us.html"> About Us</a>
-</nav>
+<h1>Extra Credit</h1>
+<h2> Code this website!</h2>
 </header>
-<section>
-<h1> About Us </h1>
-We are the Basic Web class.
-<p>
-We're learning all about 
-<a href="http://www.w3.org/TR/html51/">HTML5</a>.
-<p>In the process, we're picking up some CSS3, too.
+<button>Start Now!</button>
+<br>
+<br>
+<p>It's easy if you know your <a href="http://www.w3schools.com/html/default.asp">HTML</a> and <a href="http://www.w3schools.com/css/default.asp">CSS</a></p>
+<p><a href="https://mycampus.artinstitutes.edu/portal/server.pt/community/miami_international_university/276">Due Week 6</a></p>
 </section>
 </body>
+</html>
