--- a/test.html
+++ b/test.html
@@ -1,63 +1,61 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>Midterm Extra Credit</title>
+<title>Midterm extra credit project</title>
+<link href='http://fonts.googleapis.com/css?family=Arimo' rel='stylesheet' type='text/css'>
 <style>
 body {
-	background-color: rgba(10,49,18,1.00);
-	background-image:url(../Downloads/lights-night-street-977.jpg);
+	background-color: #B45F04;
+	background-image:url(http://41.media.tumblr.com/758a5cb9046fde53138ad0f55527ca25/tumblr_ndyfdoR6Wp1tubinno1_1280.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
 	text-align: center;
 }
 h1 {
 	color: white;
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Arimo', sans-serif;;
 	text-align: center;
 	text-transform: uppercase;
-	letter-spacing: 10px;
-	font-size: 39px;
+	letter-spacing: 9px;
+	font-size: 42px;
 	margin-bottom: 0px;
 	}
 
 h2 {
 	color: white;
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Arimo', sans-serif;;
 	text-align: center;
 	margin-top: 5px;
 }
 
 p {
 	color: white;
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Arimo', sans-serif;
 	text-align: center;
-	margin-top: 5px;
-	font-size: 10px;
+	margin-top: 10px;
+	font-size: 12px;
 }
 
 #text {
-	background-color: rgba(255,255,255,0.4);
-	padding: 10px;
-	margin-top: 130px
-	}
-#start {
+	background-color: #424242;
+	padding: 15px;
+	margin-top: 140px
 	text-align: center;
 	}
 	
 button {
-	background-color: #9E0002;
+	background-color: #2ECCFA;
 	color: white;
-	font-family: 'Raleway', sans-serif;
-	padding: 10px;
-	width: 200px;
+	font-family: 'Arimo', sans-serif;
+	padding: 15px;
+	width: 185px;
 	text-transform: uppercase;
 	border: none;
 	border-radius: 5px;
 }
 a {
 	text-decoration: none;
-	color: #9E0002;
+	color: ##2ECCFA;
 }
 </style>
 </head>
