--- a/test.html
+++ b/test.html
@@ -42,9 +42,10 @@ p {
 	margin-top: 140px
 	text-align: center;
 	margin-top: 130px
+	}
+#start {
 	text-align: center;
 	}
-	
 button {
 	background-color: #2ECCFA;
 	color: white;
