--- a/test.html
+++ b/test.html
@@ -49,6 +49,8 @@ button {
 	background-color: #2ECCFA;
 	color: white;
 	font-family: 'Arimo', sans-serif;
+	opacity: 0.4;
+        filter: alpha(opacity=40); /* For IE8 and earlier */
 	padding: 15px;
 	width: 185px;
 	text-transform: uppercase;
