--- a/test.html
+++ b/test.html
@@ -42,9 +42,6 @@ p {
 	text-align: center;
 	margin-top: 160px
 	}
-#start {
-	text-align: center;
-	}
 button {
 	background-color: #2ECCFA;
 	color: white;
@@ -59,14 +56,30 @@ a {
 	text-decoration: none;
 	color: ##2ECCFA;
 }
+div.transbox {
+    margin: 30px;
+    background-color: #ffffff;
+    border: 1px solid black;
+    opacity: 0.6;
+    filter: alpha(opacity=60); /* For IE8 and earlier */
+}
+
+div.transbox p {
+    margin: 5%;
+    font-weight: bold;
+    color: #000000;
+}
 </style>
 </head>
 
 <body>
 <section id="text">
 <header>
-<h1>Extra Credit</h1>
+<div class="background">
+  <div class="transbox"><h1>Extra Credit</h1>
 <h2> Code this website!</h2>
+</div>
+</div>
 </header>
 <button>Start Now!</button>
 <br>
