--- a/test.html
+++ b/test.html
@@ -57,9 +57,9 @@ a {
 	color: ##2ECCFA;
 }
 div.transbox {
-    margin: 30px;
-    background-color: #ffffff;
-    border: 1px solid black;
+    margin: 5px;
+    background-color:#424242;
+    
     opacity: 0.6;
     filter: alpha(opacity=60); /* For IE8 and earlier */
 }
