--- a/test.html
+++ b/test.html
@@ -38,6 +38,8 @@ p {
 
 #text {
 	background-color: #424242;
+	opacity: 0.4;
+        filter: alpha(opacity=40); /* For IE8 and earlier */;
 	padding: 15px;
 	text-align: center;
 	margin-top: 160px
