--- a/test.html
+++ b/test.html
@@ -48,6 +48,8 @@ button {
 	background-color: #2ECCFA;
 	color: white;
 	font-family: 'Arimo', sans-serif;
+	opacity: 1;
+	filter: alpha (opacity=100); /* For IE8 and earlier */
 	padding: 15px;
 	width: 185px;
 	text-transform: uppercase;
