--- a/test.html
+++ b/test.html
@@ -1,95 +1,96 @@
-<!doctype html>
-<html>
-<head>
-<title>Midterm extra credit project</title>
-<link href='http://fonts.googleapis.com/css?family=Arimo' rel='stylesheet' type='text/css'>
-<style>
-body {
-	background-color: #B45F04;
-	background-image:url(http://41.media.tumblr.com/758a5cb9046fde53138ad0f55527ca25/tumblr_ndyfdoR6Wp1tubinno1_1280.jpg);
-	background-size: cover;
-	background-repeat: no-repeat;
-	text-align: center;
-}
-h1 {
-	color: white;
-	font-family: 'Arimo', sans-serif;;
-	text-align: center;
-	text-transform: uppercase;
-	letter-spacing: 9px;
-	font-size: 42px;
-	margin-bottom: 0px;
-	}
-
-h2 {
-	color: white;
-	font-family: 'Arimo', sans-serif;;
-	text-align: center;
-	margin-top: 5px;
-}
-
-p {
-	color: white;
-	font-family: 'Arimo', sans-serif;
-	text-align: center;
-	margin-top: 10px;
-	font-size: 12px;
-}
-
-#text {
-	background-color: #424242;
-	opacity: 0.8;
-        filter: alpha(opacity=80); /* For IE8 and earlier */;
-	padding: 15px;
-	text-align: center;
-	margin-top: 160px
-	}
-button {
-	background-color: #2ECCFA;
-	color: white;
-	font-family: 'Arimo', sans-serif;
-	opacity: 1;
-	filter: alpha (opacity=100); /* For IE8 and earlier */
-	padding: 15px;
-	width: 185px;
-	text-transform: uppercase;
-	border: none;
-	border-radius: 5px;
-}
-a {
-	text-decoration: none;
-	color: ##2ECCFA;
-}
-div.transbox {
-    margin: 5px;
-    background-color:#424242;
-    
-    opacity: 0.8;
-    filter: alpha(opacity=80); /* For IE8 and earlier */
-}
-
-div.transbox p {
-    margin: 5%;
-    font-weight: bold;
-    color: #000000;
-}
-</style>
-</head>
-
-<body>
-<section id="text">
-<header>
-<div class="background">
-  <div class="transbox"><h1>Extra Credit</h1>
-<h2> Code this website!</h2>
-</div>
-</div>
-</header>
-<button>Start Now!</button>
-<br>
-<br>
-<p>It's easy if you know your <a href="http://www.w3schools.com/html/default.asp">HTML</a> and <a href="http://www.w3schools.com/css/default.asp">CSS</a></p>
-<p><a href="https://mycampus.artinstitutes.edu/portal/server.pt/community/miami_international_university/276">Due Week 6</a></p>
-</section>
-</body>
-</html>
+<!doctype html> 
+2 <html> 
+3 <head> 
+4 <title>Midterm extra credit project</title> 
+5 <link href='http://fonts.googleapis.com/css?family=Arimo' rel='stylesheet' type='text/css'> 
+6 <style> 
+7 body { 
+8 	background-color: #B45F04; 
+9 	background-image:url(http://41.media.tumblr.com/758a5cb9046fde53138ad0f55527ca25/tumblr_ndyfdoR6Wp1tubinno1_1280.jpg); 
+10 	background-size: cover; 
+11 	background-repeat: no-repeat; 
+12 	text-align: center; 
+13 } 
+14 h1 { 
+15 	color: white; 
+16 	font-family: 'Arimo', sans-serif;; 
+17 	text-align: center; 
+18 	text-transform: uppercase; 
+19 	letter-spacing: 9px; 
+20 	font-size: 42px; 
+21 	margin-bottom: 0px; 
+22 	} 
+23  
+24 h2 { 
+25 	color: white; 
+26 	font-family: 'Arimo', sans-serif;; 
+27 	text-align: center; 
+28 	margin-top: 5px; 
+29 } 
+30  
+31 p { 
+32 	color: white; 
+33 	font-family: 'Arimo', sans-serif; 
+34 	text-align: center; 
+35 	margin-top: 10px; 
+36 	font-size: 12px; 
+37 } 
+38  
+39 #text { 
+40 	background-color: #424242; 
+41 	opacity: 0.8; 
+42         filter: alpha(opacity=80); /* For IE8 and earlier */; 
+43 	padding: 15px; 
+44 	text-align: center; 
+45 	margin-top: 160px 
+46 	} 
+47 button { 
+48 	background-color: #2ECCFA; 
+49 	color: white; 
+50 	font-family: 'Arimo', sans-serif; 
+51 	opacity: 1; 
+52 	filter: alpha (opacity=100); /* For IE8 and earlier */ 
+53 	padding: 15px; 
+54 	width: 185px; 
+55 	text-transform: uppercase; 
+56 	border: none; 
+57 	border-radius: 5px; 
+58 } 
+59 a { 
+60 	text-decoration: none; 
+61 	color: ##2ECCFA; 
+62 } 
+63 div.transbox { 
+64     margin: 5px; 
+65     background-color:#424242; 
+66      
+67     opacity: 0.8; 
+68     filter: alpha(opacity=80); /* For IE8 and earlier */ 
+69 } 
+70  
+71 div.transbox p { 
+72     margin: 5%; 
+73     font-weight: bold; 
+74     color: #000000; 
+75 } 
+76 </style> 
+77 </head> 
+78 
+ 
+79 <body> 
+80 <section id="text"> 
+81 <header> 
+82 <div class="background"> 
+83   <div class="transbox"><h1>Extra Credit</h1> 
+84 <h2> Code this website!</h2> 
+85 </div> 
+86 </div> 
+87 </header> 
+88 <button>Start Now!</button> 
+89 <br> 
+90 <br> 
+91 <p>It's easy if you know your <a href="http://www.w3schools.com/html">HTML</a> and <a href="http://www.w3schools.com/css">CSS</a></p> 
+92 <p><a href="https://mycampus.artinstitutes.edu/portal/server.pt">Due Week 6</a></p> 
+93 </section> 
+94 </body> 
+95 </html> 
