--- a/test.html
+++ b/test.html
@@ -40,9 +40,9 @@
 40 	background-color: #424242; 
 41 	opacity: 0.8; 
 42         filter: alpha(opacity=80); /* For IE8 and earlier */; 
-43 	padding: 15px; 
+43 	padding: 0px; 
 44 	text-align: center; 
-45 	margin-top: 160px 
+45 	margin-top: 160px; 
 46 	} 
 47 button { 
 48 	background-color: #2ECCFA; 
