--- a/resume.html
+++ b/resume.html
@@ -7,6 +7,11 @@
 <h1> Resume</h1>
 <table>
   <caption>Experience</caption>
+  <tr>
+    <td>Company: Castle Group Marketing</td>
+    <td>City: Miami</td>
+  </tr>
+  
   
 </table>
 
