--- a/resume.html
+++ b/resume.html
@@ -11,6 +11,10 @@
     <td>Company: Castle Group Marketing</td>
     <td>City: Miami</td>
   </tr>
+  <tr>
+  <td>Job Title: Chief Marketing Director</td>
+  <td>From: March 2011 To: Present</td>
+  </tr>
   
   
 </table>
