--- a/resume.html
+++ b/resume.html
@@ -9,13 +9,18 @@
   <caption>Experience</caption>
   <tr>
     <td>Company: Castle Group Marketing</td>
-    <td>       City: Miami</td>
+    <td>City: Miami</td>
   </tr>
   <tr>
   <td>Job Title: Chief Marketing Director</td>
   <td>From: March 2011 To: Present</td>
   </tr>
-  
+  <tr>
+    <td>Description: 
+    <ul>In charge of overseeing all marketing and promotional efforts including the creation of custom graphics and logos for clientele as well as internally.</ul>
+    <ul>Updating social media accounts including the internal accounts</ul>
+    <ul>Create custom content using Adobe CC</ul></td>
+  </tr>
   
 </table>
 
