--- a/resume.html
+++ b/resume.html
@@ -17,9 +17,12 @@
   </tr>
   <tr>
     <td>Description: 
-    <ul>In charge of overseeing all marketing and promotional efforts including the creation of custom graphics and logos for clientele as well as internally.</ul>
-    <ul>Updating social media accounts including the internal accounts</ul>
-    <ul>Create custom content using Adobe CC</ul></td>
+    <ul>
+    <li>In charge of overseeing all marketing and promotional efforts including the creation of custom graphics and logos for clientele as well as internally.</li>
+    <li>Updating social media accounts including the internal accounts</li>
+    <li>Create custom content using Adobe CC</li>
+    </ul>
+    </td>
   </tr>
   
 </table>
