--- a/resume.html
+++ b/resume.html
@@ -24,7 +24,40 @@
     </ul>
     </td>
   </tr>
-  
+  <tr>
+    <td>Company: Miami Marketing Group</td>
+    <td>City: Miami Beach</td>
+  </tr>
+  <tr>
+  <td>Job Title: Promotional Team Manager</td>
+  <td>From:April 2012 To: Present</td>
+  </tr>
+  <tr>
+    <td>Description: 
+    <ul>
+    <li>Hiring and managing promotional staff</li>
+    <li>Create social media content and post updates daily</li>
+    <li>Reach out to possible clientele and open new accounts</li>
+    </ul>
+    </td>
+  </tr>
+  <tr>
+    <td>Fontainebleau Resort (LIV Nightclub)</td>
+    <td>City: Miami Beach</td>
+  </tr>
+  <tr>
+  <td>Job Title: VIP Host</td>
+  <td>From: April 2012 To: Present</td>
+  </tr>
+  <tr>
+    <td>Description: 
+    <ul>
+    <li>Reach out to high end clientele </li>
+    <li>Create and update table reservations using Nightpro &res;</li>
+    <li>Create and maintain good rapport with regular and returning clientele CC</li>
+    </ul>
+    </td>
+  </tr>
 </table>
 
 </body>
