--- a/resume.html
+++ b/resume.html
@@ -60,5 +60,34 @@
   </tr>
 </table>
 
+<table>
+  <caption>Education</caption>
+  <tr>
+    <td>School: Miami International University of Art & Design</td>
+    <td>Expected Graduation: Spring 2017</td>
+  </tr>
+  <tr>
+  <td>Miami, FL</td>
+  </tr>
+  <tr>
+    <td>Major: Graphic and Web Design (Graphic Track)
+    </td>
+    <td>Degree: Bachelor's of Fine Arts Degree</td>
+  </tr>
+  <tr>
+    <td> School:Florida International University</td>
+    <td>Expected Graduation: Fall 2017</td>
+  </tr>
+  <tr>
+  <td>Miami, FL</td>
+  </tr>
+  <tr>
+    <td>Major: Marketing
+    </td>
+    <td>Degree: Bachelor's of Science Degree</td>
+  </tr>
+  
+</table>
+
 </body>
 </html>
