--- a/resume.html
+++ b/resume.html
@@ -53,8 +53,8 @@
     <td>Description: 
     <ul>
     <li>Reach out to high end clientele </li>
-    <li>Create and update table reservations using Nightpro &res;</li>
-    <li>Create and maintain good rapport with regular and returning clientele CC</li>
+    <li>Create and update table reservations using Nightpro reservation software</li>
+    <li>Create and maintain good rapport with regular and returning clientele </li>
     </ul>
     </td>
   </tr>
