--- a/index.html
+++ b/index.html
@@ -28,7 +28,13 @@
     }
     
     body {
-      background-color: #4e23c2;
+      
+  	background: -webkit-linear-gradient(90deg, #614385 10%, #516395 90%); /* Chrome 10+, Saf5.1+ */
+  	background:    -moz-linear-gradient(90deg, #614385 10%, #516395 90%); /* FF3.6+ */
+  	background:     -ms-linear-gradient(90deg, #614385 10%, #516395 90%); /* IE10 */
+  	background:      -o-linear-gradient(90deg, #614385 10%, #516395 90%); /* Opera 11.10+ */
+  	background:         linear-gradient(90deg, #614385 10%, #516395 90%); /* W3C */
+        background-color: #4e23c2;
       font-family: 'Roboto Slab', serif;
       text-align: center;
       box-shadow: 0px 5px 6px black;
