--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         margin: 0px 20px 0px 20px
         font-size: 40px;
 	font-weight: 100;
-	padding: 15px 0px 20px;
+	padding: 15px 0px 15px;
     }
     
     body {
@@ -49,7 +49,7 @@
     
     #work {
       background-image: url(http://www.gratisography.com/pictures/53_1.jpg);
-      width:auto
+      width:cover
       height: 100px;
       text-align: center;
     }
@@ -57,7 +57,7 @@
     #type {
 	  background-image: url(http://i.imgur.com/rYYrRJi.png);
 	  color: #33C;
-	  width: 1247px;
+	  width: cover;
           height: 250px;
           text-align: center;
 	  background-repeat:no-repeat;
