--- a/gradients.html
+++ b/gradients.html
@@ -3,11 +3,11 @@
 <head>
   <style>
     
-  body {background: -webkit-linear-gradient(90deg, #614385 10%, #516395 90%); /* Chrome 10+, Saf5.1+ */
-  background:    -moz-linear-gradient(90deg, #614385 10%, #516395 90%); /* FF3.6+ */
-  background:     -ms-linear-gradient(90deg, #614385 10%, #516395 90%); /* IE10 */
-  background:      -o-linear-gradient(90deg, #614385 10%, #516395 90%); /* Opera 11.10+ */
-  background:         linear-gradient(90deg, #614385 10%, #516395 90%); /* W3C */
+  body {background: -webkit-linear-gradient(198deg, #000099 82%, $000066 18%); /* Chrome 10+, Saf5.1+ */
+  background:    -moz-linear-gradient(198deg, #000099 82%, #000066 18%); /* FF3.6+ */
+  background:     -ms-linear-gradient(198deg, #000099 82%, #000066 18%); /* IE10 */
+  background:      -o-linear-gradient(198deg, #000099 82%, #000066 18%); /* Opera 11.10+ */
+  background:         linear-gradient(198deg, #000099 82%, #000066 18%); /* W3C */
   }
         
   </style>
