--- a/gradients.html
+++ b/gradients.html
@@ -3,7 +3,7 @@
 <head>
   <style>
     
-  body {background: -webkit-linear-gradient(-180deg, #000099 82%, $000066 18%); /* Chrome 10+, Saf5.1+ */
+  body {background: -webkit-linear-gradient(-180deg, #000099 82%, #000066 18%); /* Chrome 10+, Saf5.1+ */
   background:    -moz-linear-gradient(-180deg, #000099 93%, #000066 7%); /* FF3.6+ */
   background:     -ms-linear-gradient(-180deg, #000099 93%, #000066 7%); /* IE10 */
   background:      -o-linear-gradient(-180deg, #000099 93%, #000066 7%); /* Opera 11.10+ */
