--- a/gradients.html
+++ b/gradients.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+  <link href='http://fonts.googleapis.com/css?family=Ubuntu:400,700' rel='stylesheet' type='text/css'>
   <style>
     
   body {background: -webkit-linear-gradient(-180deg, #000099 82%, #000066 18%); /* Chrome 10+, Saf5.1+ */
@@ -9,11 +10,16 @@
   background:      -o-linear-gradient(198deg, #000099 93%, #000066 7%); /* Opera 11.10+ */
   background:         linear-gradient(198deg, #000099 93%, #000066 7%); /* W3C */
   }
+  
+  h1{
+    font-family: 'Ubuntu', sans-serif;
+    color: #FFF;
+  }
         
   </style>
   
 </head>
 <body>
-  
+  <h1>Helloooo!!! </h1>
 </body>
 </html>
