--- a/gradients.html
+++ b/gradients.html
@@ -4,16 +4,17 @@
   <link href='http://fonts.googleapis.com/css?family=Ubuntu:400,700' rel='stylesheet' type='text/css'>
   <style>
     
-  body {background: -webkit-linear-gradient(198deg, #000099 82%, #000066 18%); /* Chrome 10+, Saf5.1+ */
-  background:    -moz-linear-gradient(198deg, #000099 93%, #000066 7%); /* FF3.6+ */
-  background:     -ms-linear-gradient(198deg, #000099 93%, #000066 7%); /* IE10 */
-  background:      -o-linear-gradient(198deg, #000099 93%, #000066 7%); /* Opera 11.10+ */
-  background:         linear-gradient(198deg, #000099 93%, #000066 7%); /* W3C */
+  body {background: -webkit-linear-gradient(180deg, #000099 82%, #000066 18%); /* Chrome 10+, Saf5.1+ */
+  background:    -moz-linear-gradient(180deg, #000099 82%, #000066 18%); /* FF3.6+ */
+  background:     -ms-linear-gradient(180deg, #000099 82%, #000066 18%); /* IE10 */
+  background:      -o-linear-gradient(180deg, #000099 82%, #000066 18%); /* Opera 11.10+ */
+  background:         linear-gradient(180deg, #000099 82%, #000066 18%); /* W3C */
   }
   
   h1{
     font-family: 'Ubuntu', sans-serif;
     color: #FFF;
+    text-align: center
   }
         
   </style>
