--- a/gradients.html
+++ b/gradients.html
@@ -16,9 +16,11 @@
   }
   
   h1{
-    font-family: 'Ubuntu', sans-serif;
-    color: #FFF;
-    text-align: center
+    font-family: "Ubuntu",sans-serif;
+color: rgba(221, 223, 230, 1);
+text-align: center;
+font-size: 100px;
+text-shadow: 2px 10px 12px #04113C;
   }
         
   </style>
