--- a/gradients.html
+++ b/gradients.html
@@ -4,16 +4,17 @@
   <link href='http://fonts.googleapis.com/css?family=Ubuntu:400,700' rel='stylesheet' type='text/css'>
   <style>
     
-  body {
-  background: -webkit-linear-gradient(90deg, #517fa4 10%, #243949 90%); /* Chrome 10+, Saf5.1+ */
-  background:    -moz-linear-gradient(90deg, #517fa4 10%, #243949 90%); /* FF3.6+ */
-  background:     -ms-linear-gradient(90deg, #517fa4 10%, #243949 90%); /* IE10 */
-  background:      -o-linear-gradient(90deg, #517fa4 10%, #243949 90%); /* Opera 11.10+ */
-  background:         linear-gradient(90deg, #517fa4 10%, #243949 90%); /* W3C */
-        
-
-
-  }
+     body {
+        background: linear-gradient(270deg, rgba(142, 209, 173, 1) 10%, rgba(209, 222, 231, 1) 90%) repeat scroll 0% 0% transparent;
+        background-color: transparent;
+        background-image: linear-gradient(90deg, #517FA4 10%, #243949 90%);
+        background-repeat: repeat;
+        background-attachment: scroll;
+        background-position: 0% 0%;
+        background-clip: border-box;
+        background-origin: padding-box;
+        background-size: auto auto;
+}
   
   h1{
     font-family: "Ubuntu",sans-serif;
