--- a/gradients.html
+++ b/gradients.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <link href='http://fonts.googleapis.com/css?family=Ubuntu:400,700' rel='stylesheet' type='text/css'>
   <style>
     
@@ -23,5 +24,10 @@ text-shadow: 2px 10px 12px #04113C;
 </head>
 <body>
   <h1>Helloooo!!! </h1>
+  
+<i class="fa fa-laptop"></i>
+<i class="fa fa-paint-brush"></i>
+<i class="fa fa-glass"></i>
+
 </body>
 </html>
