--- a/gradients.html
+++ b/gradients.html
@@ -18,6 +18,11 @@ text-align: center;
 font-size: 100px;
 text-shadow: 2px 10px 12px #04113C;
   }
+  element {
+    font-size: 100px;
+    font-color: #FFF;
+    text-shadow: 3px 3px 4px #0G3;
+    
         
   </style>
   
@@ -25,9 +30,9 @@ text-shadow: 2px 10px 12px #04113C;
 <body>
   <h1>Helloooo!!! </h1>
   
-<i class="fa fa-laptop"></i>
+<div><i class="fa fa-laptop"></i>
 <i class="fa fa-paint-brush"></i>
 <i class="fa fa-glass"></i>
-
+</div>
 </body>
 </html>
