--- a/portfolio.html
+++ b/portfolio.html
@@ -6,10 +6,7 @@
   <link href='http://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Megrim' rel='stylesheet' type='text/css'>
   <style>
-  
-    
-	
-	a {
+  	a {
       text-decoration: none;
       color: #306 ;
     }
@@ -65,17 +62,19 @@
           text-align: center;
 	  background-repeat:no-repeat;
     }
-  </style>
-  }
-  img {
-	  width: 400px;
+    
+    #images{
+    	img {
+	  height: 300px;
 	  }
+    }
  </style>
 </head>
 
 <body>
 <h1>Some of My Work</h1>
-<table>
+<div class=images>
+	<table>
 <tr>
 <td><a href="http://imgur.com/L7jDgiv"><img src="http://i.imgur.com/L7jDgiv.jpg" title="Chris Pratt Digital Illustration" /></a></td>
 <td><a href="http://imgur.com/URdjjcd"><img src="http://i.imgur.com/URdjjcd.jpg" title="Color Manipulation Ad" /></a></td>
@@ -92,5 +91,6 @@
 <td><a href="http://imgur.com/a8RWNy8"><img src="http://i.imgur.com/a8RWNy8.jpg" title="Headphones" /></a></td>
 </tr>
 </table>
+</div>
 </body>
 </html>
