--- a/portfolio.html
+++ b/portfolio.html
@@ -62,12 +62,6 @@
           text-align: center;
 	  background-repeat:no-repeat;
     }
-    
-    #images{
-    	img {
-	  height: 300px;
-	  }
-    }
  </style>
 </head>
 
@@ -76,19 +70,20 @@
 <div class=images>
 	<table>
 <tr>
-<td><a href="http://imgur.com/L7jDgiv"><img src="http://i.imgur.com/L7jDgiv.jpg" title="Chris Pratt Digital Illustration" /></a></td>
-<td><a href="http://imgur.com/URdjjcd"><img src="http://i.imgur.com/URdjjcd.jpg" title="Color Manipulation Ad" /></a></td>
-<td><a href="http://imgur.com/4OYo536"><img src="http://i.imgur.com/4OYo536.jpg" title="Album Cover Art" /></a></td>
+<td><img src="http://i.imgur.com/L7jDgiv.jpg"alt="Chris Pratt Digital Illustration" height="425" /></td>
+ 
+<td><img src="http://i.imgur.com/URdjjcd.jpg" alt="Color Manipulation Ad" height="425" /></td>
+<td><img src="http://i.imgur.com/4OYo536.jpg" alt="Album Cover Art" height="425" /></td>
 </tr>
 <tr>
-<td><a href="http://imgur.com/6az1jIV"><img src="http://i.imgur.com/6az1jIV.jpg" title="Nike AirMag Illustration" /></a></td>
-<td><a href="http://imgur.com/cPQrm8J"><img src="http://i.imgur.com/cPQrm8J.jpg" title="Cologne Package/ Branding Design" /></a></td>
-<td><a href="http://imgur.com/WdjxIh3"><img src="http://i.imgur.com/WdjxIh3.jpg" title="Digital Airbrushing" /></a></td>
+<td><img src="http://i.imgur.com/6az1jIV.jpg" alt="Nike AirMag Illustration" height="425" /></td>
+<td><img src="http://i.imgur.com/cPQrm8J.jpg" alt="Cologne Package/ Branding Design" height="425" /></td>
+<td><img src="http://i.imgur.com/WdjxIh3.jpg" alt="Digital Airbrushing" height="425" /></td>
 </tr>
 <tr>
-<td><a href="http://imgur.com/fPYyJmR"><img src="http://i.imgur.com/fPYyJmR.jpg" title="Castle Group Marketing Logo" /></a></td>
-<td><a href="http://imgur.com/Fl55upD"><img src="http://i.imgur.com/Fl55upD.jpg" title="Image Manipulation/Patron Ad" /></a></td>
-<td><a href="http://imgur.com/a8RWNy8"><img src="http://i.imgur.com/a8RWNy8.jpg" title="Headphones" /></a></td>
+<td><img src="http://i.imgur.com/fPYyJmR.jpg" alt="Castle Group Marketing Logo" height="425" /></td>
+<td><img src="http://i.imgur.com/Fl55upD.jpg" alt="Image Manipulation/Patron Ad" height="425" /></td>
+<td><img src="http://i.imgur.com/a8RWNy8.jpg" alt="Headphones" height="425" /></td>
 </tr>
 </table>
 </div>
